Add support for Java 12.